<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/size_radio_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/base_color_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/image_compress_method"
            android:textColor="@color/common_text_black33"
            android:textSize="@dimen/sp_18"
            tools:text=" " />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:checkedButton="@+id/auto_radio"
            android:padding="@dimen/dp_0">

            <RadioButton
                android:id="@+id/auto_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:buttonTint="@color/common_res_primary_color"
                android:checked="true"
                android:text="@string/image_compress_by_size_auto" />

            <RadioButton
                android:id="@+id/specify_size_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:buttonTint="@color/common_res_primary_color"
                android:text="@string/image_compress_by_custom_size" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/specify_size_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/base_color_white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_20"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/expect_size_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/image_compress_expected_size"
            android:textColor="@color/common_text_black33"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/custom_size_layout"
            layout="@layout/compress_param_percent_layout" />
    </LinearLayout>

</LinearLayout>