<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/custom_size_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_res_primary_color"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:text="@string/image_edit_custom_size_popup_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/custom_size_fix_width_ll"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_size_title_tv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_edit_custom_size_popup_fix_width"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fix_width_et"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:height="@dimen/dp_40"
                android:background="@drawable/image_custom_size_input_bg"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/image_edit_custom_size_popup_fix_pixel"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/custom_size_fix_height_ll"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_size_title_tv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_edit_custom_size_popup_fix_height"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fix_height_et"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:height="@dimen/dp_40"
                android:background="@drawable/image_custom_size_input_bg"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/image_edit_custom_size_popup_fix_pixel"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/custom_size_fix_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="@id/custom_size_fix_width_ll"
        app:layout_constraintTop_toBottomOf="@id/custom_size_fix_width_ll" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:text="@string/image_edit_custom_size_popup_fix_ratio"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="@id/custom_size_fix_ratio"
        app:layout_constraintLeft_toRightOf="@id/custom_size_fix_ratio"
        app:layout_constraintTop_toTopOf="@id/custom_size_fix_ratio" />

    <View
        android:id="@+id/custon_size_botton_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#E6E2E2"
        app:layout_constraintTop_toBottomOf="@id/custom_size_fix_ratio" />

    <View
        android:id="@+id/custom_bottom_center_line"
        android:layout_width="1px"
        android:layout_height="@dimen/dp_0"
        android:background="#E6E2E2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custon_size_botton_line" />

    <TextView
        android:id="@+id/custom_size_cancel_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/image_cancel"
        android:textColor="#838282"
        android:textSize="@dimen/sp_28"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/custom_bottom_center_line"
        app:layout_constraintTop_toBottomOf="@id/custon_size_botton_line" />

    <TextView
        android:id="@+id/custom_size_sure_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/image_sure"
        android:textColor="@color/common_res_primary_color"
        android:textSize="@dimen/sp_28"
        app:layout_constraintLeft_toRightOf="@id/custom_bottom_center_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custon_size_botton_line" />


</androidx.constraintlayout.widget.ConstraintLayout>